@@ -24,7 +24,7 @@ namespace BOB
 		}
 
 		// Layout constants - mode buttons.
-		private const float ModeX = Margin + (ToggleSize * 3f);
+		private const float ModeX = Margin + (ToggleSize * 4f);
 		protected const float ModeY = ToggleY;
 
 		// Layout constants - detail controls - align bottom with bottom of lists, and work up.
@@ -49,7 +49,7 @@ namespace BOB
 		// Panel components.
 		protected BOBSlider probabilitySlider, angleSlider, xSlider, ySlider, zSlider;
 		protected UIButton hideButton;
-		private readonly UICheckBox randomCheck;
+		private readonly UICheckBox randomCheck, bothCheck;
 		private readonly UICheckBox[] modeChecks = new UICheckBox[(int)ReplacementModes.NumModes];
 		protected UIPanel heightPanel;
 		private UIPanel anglePanel;
@@ -143,6 +143,21 @@ namespace BOB
 				}
 			}
 		}
+		
+		
+		/// <summary>
+		/// Sets the current target item and updates button states accordingly.
+		/// </summary>
+		internal override TargetListItem CurrentTargetItem
+		{
+			set
+			{
+				base.CurrentTargetItem = value;
+
+				// Don't show angle slider for trees.
+				anglePanel.isVisible = !(value?.CurrentPrefab is TreeInfo);
+			}
+		}
 
 
 		/// <summary>
@@ -185,6 +200,10 @@ namespace BOB
 		{
 			try
 			{
+				// Tree/Prop 'both' checkbox.
+				bothCheck = IconToggleCheck(this, Margin + (ToggleSize * 2f), ToggleY, "BOB-PropsSmall", "BOB_PNL_BOT");
+				bothCheck.eventCheckChanged += BothCheckChanged;
+
 				// Replacement mode buttons.
 				for (int i = 0; i < (int)ReplacementModes.NumModes; ++i)
 				{
@@ -306,6 +325,27 @@ namespace BOB
 
 
 		/// <summary>
+		/// Prop check event handler.
+		/// </summary>
+		/// <param name="control">Calling component (unused)</param>
+		/// <param name="isChecked">New checked state</param>
+		protected override void PropCheckChanged(UIComponent control, bool isChecked)
+		{
+			// First, undo any preview.
+			RevertPreview();
+
+			// Perform the usual required tasks first.
+			base.PropCheckChanged(control, isChecked);
+
+			if (isChecked)
+			{
+				// Deselect both checkbox.
+				bothCheck.isChecked = false;
+			}
+		}
+
+
+		/// <summary>
 		/// Tree check event handler.
 		/// </summary>
 		/// <param name="control">Calling component (unused)</param>
@@ -323,15 +363,48 @@ namespace BOB
 			{
 				UpdateModeIcons(TreeModeAtlas, TreeModeTipKeys);
 				hideButton.atlas = TextureUtils.LoadSpriteAtlas("BOB-InvisibleTree");
+
+				// Deselect both checkbox.
+				bothCheck.isChecked = false;
 			}
 			else
 			{
 				UpdateModeIcons(PropModeAtlas, PropModeTipKeys);
 				hideButton.atlas = TextureUtils.LoadSpriteAtlas("BOB-InvisibleProp");
 			}
+		}
 
-			// Don't show angle slider for trees.
-			anglePanel.isVisible = !isChecked;
+
+		/// <summary>
+		/// 'Both' (tree and prop) check event handler.
+		/// </summary>
+		/// <param name="control">Calling component (unused)</param>
+		/// <param name="isChecked">New checked state</param>
+		private void BothCheckChanged(UIComponent control, bool isChecked)
+		{
+			if (isChecked)
+			{
+				// Props are now selected - unset other checks.
+				treeCheck.isChecked = false;
+				propCheck.isChecked = false;
+
+				// Update current mode.
+				PropTreeMode = PropTreeModes.Both;
+
+				// Reset current items.
+				CurrentTargetItem = null;
+				ReplacementPrefab = null;
+
+				// Set 'no props' label text.
+				noPropsLabel.text = Translations.Translate("BOB_PNL_NOP");
+
+				// Regenerate lists.
+				LoadedList();
+				TargetList();
+
+				// Update button states.
+				UpdateButtonStates();
+			}
 		}
 
 
@@ -412,7 +485,6 @@ namespace BOB
 					randomList.AddRange(PrefabLists.RandomProps);
 					randomList.AddRange(PrefabLists.RandomTrees);
 
-					// Both props and trees.
 					loadedList.rowsData = new FastList<object>
 					{
 						m_buffer = randomList.OrderBy(x => x.name.ToLower()).ToArray(),
